--- a/maze/package.json
+++ b/maze/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "rxjs": "~7.8.0",
     "three": "^0.174.0",
+    "three-csg-ts": "^3.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
